# scale-api-compose-pilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_AGENT_GUIDE.md  API_CLIENT_USAGE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_KNOWLEDGE_BASE.md  CLI_USAGE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_NAMES.md  README.md  advice-from-gh-copilot.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  task.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
docs/api/: index.rst  manager.rst
docs/reference/: COMMUNITY_RESEARCH.md  PROJECT_SUMMARY.md  TRUENAS_SCALE_PATTERNS.md
examples/: nginx-webserver.yml  postgres-database.yml  redis-cache.yml  simple-deployment.py
samples/inventor/: docker-compose.yml  dockerfile  fast-build.sh
samples/inventor/app/: __init__.py  config.py  database_utils.py  db_utils.py  debug.py  debug_scan.py  debug_section_discovery.py  entrypoint.sh  fast-build.sh  file_counter.py  file_id_generator.py  file_indexer.py  find_duplicates.py  get_video_properties.py  logger.py  main.py  main_display.py  nfs_utils.py  requirements.txt  section_discovery.py  section_processor.py  sqlite_init.py  status_display.py  utils.py  video_metadata.py  webservice.py
samples/inventor/app/static/: index.html
samples/inventor/app/web/: __init__.py  app.py  models.py  utils.py
samples/inventor/app/web/routes/: __init__.py  dashboard.py  health.py  inventory.py  logs.py  sections.py
samples/inventor/db/: videoinventory.db
scale_api_compose_pilot/: __init__.py  ai_helper.py  cli.py  config.py  dependency_installer.py  discovery.py  exceptions.py  installation_detector.py  manager.py  path_setup.py  setup_wizard.py
tests/: test_manager.py
