


[project]
name = "scale-api-compose-pilot"
version = "0.1.0"
description = "Pilot Docker Compose workloads to TrueNAS Scale via WebSocket API - AI-friendly automation tool"
authors = [
    {name = "sst", email = "svnstfns@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["truenas", "scale", "docker", "compose", "api", "automation", "pilot", "nas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0", 
    "websocket-client>=1.0.0",
    "truenas-api-client @ git+https://github.com/truenas/api_client.git",
    "zeroconf>=0.131.0",
    "requests>=2.25.0",
    "keyring>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.24",
]

[project.urls]
Homepage = "https://github.com/svnstfns/scale-api-compose-pilot"
Documentation = "https://github.com/svnstfns/scale-api-compose-pilot#readme"
Repository = "https://github.com/svnstfns/scale-api-compose-pilot.git"
"Bug Tracker" = "https://github.com/svnstfns/scale-api-compose-pilot/issues"

[project.scripts]
scale-compose = "scale_api_compose_pilot.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scale_api_compose_pilot*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
